--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/"><span style="color: blue">curtis</span><span style="color: charcoal">spendlove</span></a>
+        <a class="navbar-brand" href="/"><span style="color: blue">C</span><span style="color: charcoal">S</span></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
