--- a/css/main.scss
+++ b/css/main.scss
@@ -5,11 +5,20 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:400,700|Source+Serif+Pro:400,700);
 
 body {
+  font-family: 'Source Serif Pro';
   font-size: 1.8em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Source Sans Pro';
 }
 
 img {
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+.date {
+  color: #777;
 }
